--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Mew Shop" data-rh="true" />
+    <meta name="description" content="Trang chủ Mew Shop" data-rh="true" />
     <title>Mew Shop</title>
   </head>
   <body ondragstart="return false;" ondrop="return false;">
